[package]
name = "canvas_rust"
version = "0.1.0"
edition = "2021"


[dependencies]
leptos = { version = "0.5.0-rc2", features = ["csr"] }
js-sys = "0.3.64"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen-futures = "0.4.37"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]